force-app/main/default/objects/Project_Expense__c/Project_Expense__c.object-meta.xml
<CustomObject>
    <description>Project related travel expenses</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>