force-app/main/default/objects/Project_Expense__c/fields/Airfare_Billable__c.field-meta.xml
<CustomField>
    <fullName>Airfare_Billable__c</fullName>
    <inlineHelpText>Billable airfare</inlineHelpText>
    <label>Airfare (Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>