force-app/main/default/objects/Project_Expense__c/fields/Airfare_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Airfare_Non_Billable__c</fullName>
    <inlineHelpText>Non billable airfare expenses</inlineHelpText>
    <label>Airfare (Non Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>