force-app/main/default/objects/Project_Expense__c/fields/Auto_Expenses_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Auto_Expenses_Non_Billable__c</fullName>
    <inlineHelpText>Non billable automobile expenses (gas, mileage, car rental, etc.)</inlineHelpText>
    <label>Auto Expenses (Non Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>