force-app/main/default/objects/Project_Expense__c/fields/Expense_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_End_Date__c</fullName>
    <label>Expense End Date</label>
    <type>Date</type>
</CustomField>