force-app/main/default/objects/Project_Expense__c/fields/Expense_Notes__c.field-meta.xml
<CustomField>
    <fullName>Expense_Notes__c</fullName>
    <inlineHelpText>Record any notes about expenses.</inlineHelpText>
    <label>Expense Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>