force-app/main/default/objects/Project_Expense__c/fields/Hotel_Billable__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Billable__c</fullName>
    <inlineHelpText>Billable hotel expenses</inlineHelpText>
    <label>Hotel (Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>