force-app/main/default/objects/Project_Expense__c/fields/Meals_Billable__c.field-meta.xml
<CustomField>
    <fullName>Meals_Billable__c</fullName>
    <inlineHelpText>Billable meal expenses</inlineHelpText>
    <label>Meals (Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>