force-app/main/default/objects/Project_Expense__c/fields/Meals_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Meals_Non_Billable__c</fullName>
    <inlineHelpText>Non billable meal expenses</inlineHelpText>
    <label>Meals (Non Billable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>