force-app/main/default/objects/Project_Expense__c/fields/Misc_Expenses_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Misc_Expenses_Non_Billable__c</fullName>
    <inlineHelpText>Record any additional non billable expenses not covered in any of the standard fields.</inlineHelpText>
    <label>Misc. Expenses (Non BIllable)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>