force-app/main/default/objects/Project_Expense__c/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>