force-app/main/default/objects/Project_Expense__c/fields/Total_Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Expenses__c</fullName>
    <formula>Airfare_Billable__c +  Auto_Expenses_Billable__c +  Hotel_Billable__c +  Meals_Billable__c +  Misc_Expenses_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total billable expenses</inlineHelpText>
    <label>Total Billable Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>