force-app/main/default/objects/Project_Expense__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>Total_Billable_Expenses__c +  Total_Non_Billable_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all billable expenses (billable + non billable)</inlineHelpText>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>