force-app/main/default/objects/Project_Expense__c/fields/Total_Non_Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Expenses__c</fullName>
    <formula>Airfare_Non_Billable__c +    Auto_Expenses_Non_Billable__c   +    Hotel_Non_Billable__c  +    Meals_Non_Billable__c  +    Misc_Expenses_Non_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total non billable expenses</inlineHelpText>
    <label>Total Non Billable Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>