force-app/main/default/objects/Project_Expense__c/listViews/AllExpenses.listView-meta.xml
<ListView>
    <fullName>AllExpenses</fullName>
    <columns>NAME</columns>
    <columns>Projects__c</columns>
    <columns>Resource__c</columns>
    <columns>EXP_START_DATE__c</columns>
    <columns>Expense_End_Date__c</columns>
    <columns>Total_Billable_Expenses__c</columns>
    <columns>Total_Non_Billable_Expenses__c</columns>
    <columns>Total_Expenses__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Expenses</label>
    <language>en_US</language>
</ListView>